k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-discovery
  namespace: keycloak
spec:
  clusterIP: None
  ports:
  - port: 7800
    targetPort: 7800
    protocol: TCP
    name: jgroups-bind
  - port: 57800
    targetPort: 57800
    protocol: TCP
    name: jgroups-fd
  selector:
    app: keycloak
