k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress-public
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "AUTH_SESSION_ID"
spec:
  ingressClassName: nginx
  rules:
  - host: sso.domain.tld
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: blank-page
            port:
              number: 80
      - path: /realms
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
      - path: /resources
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
      - path: /js
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
  tls:
  - hosts:
    - sso.domain.tld
    secretName: keycloak-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress-admin
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "AUTH_SESSION_ID"
spec:
  ingressClassName: nginx
  rules:
  - host: iam.domain.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
  tls:
    - hosts:
        - iam.domain.tld
      secretName: keycloak-tls-secret
